# care-home-tablet

./: .env.example  .gitignore  LICENSE  PRIVACY.md  README.md  index.html  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
.github/workflows/: release-installers.yml  release.yml
src/: App.vue  main.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts
src/pages/: HomePage.vue  PairPage.vue  PinPage.vue  QuickCareLogPage.vue  QuickVitalPage.vue  ResidentPage.vue
src/stores/: device.ts  session.ts
src/styles/: app.css  quasar-variables.sass
