[package]
name = "care-home-tablet"
version = "0.1.0"
description = "Care Doc tablet — caregiver-facing companion app"
authors = ["jangminho"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "care_home_tablet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
